Sort of working menu system; still needs a lot of work. WindowSystem doesn't use z-index for positioning anymore, there seems to be some bug in handling that in Chrome. Now it reorders windows in the DOM to do stacking.

--- a/Synesthesia.UI.css
+++ b/Synesthesia.UI.css
@@ -5,6 +5,8 @@
 
   .Synesthesia_UI .mainmenu {
     -webkit-flex: 0 0 auto;
+    border-bottom: 1px solid #808080;
+    padding: 0px 10px;
   }
 
   .Synesthesia_UI .windowsystem {
